fix the design on the footer to make it more aligned

--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -98,23 +98,32 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
 }
 
 .dl-buttons {
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 45%;
 }
 
 .total-texts {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    width: 50%;
+    flex-direction: row;
+    width: 55%;
+    color: black;
 }
 
-.total-needs {
-    color: black;
+.total-labels {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.total-values {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
